--- a/University-Backend/appsettings.json
+++ b/University-Backend/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "Est4Es_L4_Clav3_Secreta",
+    "ValidateIssuer": true,
+    "ValidIssuer": "http://localhost:5000",
+    "ValidateAudience": true,
+    "ValidAudience": "http://localhost:5000",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
+  }
 }
